--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ body {
 /* Typography */
 .script-text {
     font-family: 'Dancing Script', cursive;
+    /* font-size: 30px; */
 }
 
 .text-gradient {
@@ -243,11 +244,16 @@ body {
     background: var(--accent-dark);
 }
 
+
+
+
+
+
 /* Hero Section */
 .hero-section {
     min-height: 100vh;
     position: relative;
-    background: url('./images/hero-burger(1).jpg') center/cover no-repeat;
+    background: url('./images/food-table-background-1j6ik0elenqlwh4k.jpg') center/cover no-repeat;
     display: flex;
     align-items: center;
 }
@@ -320,20 +326,21 @@ body {
     margin-bottom: 0.5rem;
     animation: fadeInUp 1s ease-out;
 }
-
-.hero-title .bold-text {
+#home .bold-text {
     display: block;
     font-size: 2.5rem;
     font-weight: 900;
     color: white;
     letter-spacing: 2px;
+    margin-bottom: 0.4rem;
     animation: fadeInUp 1s ease-out 0.3s both;
 }
 
 .hero-subtitle {
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     color: rgba(255, 255, 255, 0.9);
     margin-bottom: 2rem;
+    font-weight: 500;
     animation: fadeInUp 1s ease-out 0.6s both;
 }
 
@@ -556,6 +563,24 @@ body {
 }
 
 /* best selling  */
+/* 
+#bestselling{
+
+} */
+
+
+
+#bestselling .prev-arrow{
+    left: -40px;
+}
+#bestselling .slick-arrow{
+    background-color: var(--primary-color2);
+
+}
+
+#bestselling .next-arrow{
+    right: -40px;
+}
 
 
 
